V4.1.2 (in progress)
[FEATURE] : Add website specific 403 and 404 pages

V4.1.1 (08/03/2011)
[BUG] : Correct bugs numbers: 1742, 1746, 1715, 1753, 1757, 1758 (see http://www.automne-cms.org/bug/)
[REFACTOR] : Update JSMin to last version available
[REFACTOR] : Review all uploading files methods to comply with security consideration
[FEATURE] : Add publish and unpublish tools to pages and polymod primary resource objects

V4.1.0 (24/02/2011)
[BUG] : Correct bugs numbers: 1432, 1412, 1410, 1432, 1430, 1389, 1380, 1362, 1315, 1243, 1209, 1062, 522, 883, 539, 930, 536, 535, 519, 293 (see http://www.automne-cms.org/bug/)
[REFACTOR] : Change max execution time for scripts. Set to 2 minutes by default
[REFACTOR] : Change polymod search to add one by one result return. Use POLYMOD_SEARCH_RETURN_INDIVIDUALS_OBJECTS search method with getNextResult method. This greatly improves the memory management.
[REFACTOR] : Manage alpha transparency on PNG and GIF images during image resizing
[REFACTOR] : Move /automne_linx_files directory to /automne/linx
[REFACTOR] : Move /automne_modules_files to /files
[REFACTOR] : Move /automne_bin to /automne/bin
[REFACTOR] : Move /sql to /automne/sql
[REFACTOR] : Move /html to /automne/html
[REFACTOR] : Use CMS_cache to store Backtraces, Stats and Polymod structures instead of user session
[REFACTOR] : Add default attribute to text and varchar blocks (standard module) to specifie a specific text instead of the default "Lorem Ipsum" text
[REFACTOR] : Update ExtJS to version 3.3.1
[REFACTOR] : Rewrite standard and polymod parsings to be both compatibles with tags and vars replacements
[REFACTOR] : Rewrite polymod replacement vars to handle nested vars replacements
[REFACTOR] : Rewrite tags atm-if, atm-else, atm-setvar, atm-start-tag, atm-end-tag, atm-title, atm-page, atm-website, atm-admin, atm-edit to be compatible with both standard and polymod parsers
[REFACTOR] : Update all rows and templates help for XML syntax.