@@ -51,7 +51,10 @@ dist
 do
 doc
 docx
+docm
 dot
+dotx
+dotm
 doxy
 dtd
 dwt
@@ -123,6 +126,9 @@ nbattrs
 net
 new
 nvl
+odf
+odg
+odp
 ods
 odt
 old
@@ -141,9 +147,14 @@ pem
 png
 po
 pot
+potm
+potx
+ppam
 pps
+ppsm
 ppsx
 ppt
+pptm
 pptx
 prd
 print
@@ -176,7 +187,10 @@ spec
 sql
 sqlite
 sqlmys
+sldm
+sldx
 stl
+stw
 svg
 svn
 svn-base
@@ -193,12 +207,14 @@ theme
 tif
 tiff
 tix
+thmx
 tle
 tmp
 tpl
 ttf
 txt
 types
+uot
 v1
 v2
 v3
@@ -211,8 +227,14 @@ wmz
 woff
 wps
 ws
+xl
+xlc
 xls
+xlsb
+xlsm
 xlsx
+xltm
+xltx
 xmap
 xml
 xsd
