@@ -21,6 +21,15 @@
     line-height:                0;
     visibility:                 hidden;
 }
+.clearfix {
+	display: inline-block;
+}
+html[xmlns] .clearfix {
+	display: block;
+}
+* html .clearfix {
+	height: 1%;
+}
 .inline {
     display:                    inline-block;
 }
