@@ -1,5 +1,11 @@
 V4.1.2 (in progress)
+[BUG] : Correct bugs numbers: 1861, 1837 (see http://www.automne-cms.org/bug/)
+[REFACTOR] : Update upload file whitelist
+[FEATURE] : Add direct access to rows and templates help links in side panel
 [FEATURE] : Add website specific 403 and 404 pages
+[FEATURE] : Allow combo search in categories selection in polymod edition
+[FEATURE] : Allow combo search in users/groups selection in polymod edition
+[FEATURE] : Allow combo search in subobjects selection in polymod edition
 
 V4.1.1 (08/03/2011)
 [BUG] : Correct bugs numbers: 1742, 1746, 1715, 1753, 1757, 1758 (see http://www.automne-cms.org/bug/)
